logs/cloudshell-pdu-raritan.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Inject-3.3.1.egg-info'...
Listing './lib/python3.5/site-packages/cloudshell'...
Listing './lib/python3.5/site-packages/cloudshell/configuration'...
Listing './lib/python3.5/site-packages/cloudshell/core'...
Listing './lib/python3.5/site-packages/cloudshell/core/context'...
Listing './lib/python3.5/site-packages/cloudshell/core/logger'...
Compiling './lib/python3.5/site-packages/cloudshell/core/logger/qs_logger.py'...
***   File "./lib/python3.5/site-packages/cloudshell/core/logger/qs_logger.py", line 285
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/cloudshell/power'...
Listing './lib/python3.5/site-packages/cloudshell/power/pdu'...
Listing './lib/python3.5/site-packages/cloudshell/power/pdu/device'...
Listing './lib/python3.5/site-packages/cloudshell/power/pdu/managed_devices'...
Listing './lib/python3.5/site-packages/cloudshell/power/pdu/mibs'...
Listing './lib/python3.5/site-packages/cloudshell/power/pdu/raritan'...
Listing './lib/python3.5/site-packages/cloudshell/power/pdu/raritan/device'...
Listing './lib/python3.5/site-packages/cloudshell/shell'...
Listing './lib/python3.5/site-packages/cloudshell/shell/core'...
Listing './lib/python3.5/site-packages/cloudshell/shell/core/dependency_injection'...
Listing './lib/python3.5/site-packages/cloudshell/shell/core/interfaces'...
Listing './lib/python3.5/site-packages/cloudshell/shell/core/session'...
Listing './lib/python3.5/site-packages/cloudshell/tests'...
Listing './lib/python3.5/site-packages/cloudshell/tests/driver_bootstrap'...
Listing './lib/python3.5/site-packages/cloudshell_core-2.1.153.egg-info'...
Listing './lib/python3.5/site-packages/cloudshell_pdu_core-1.0.21.egg-info'...
Listing './lib/python3.5/site-packages/cloudshell_pdu_raritan-1.0.55.egg-info'...
Listing './lib/python3.5/site-packages/cloudshell_shell_core-2.3.4.egg-info'...
Listing './lib/python3.5/site-packages/mock'...
Listing './lib/python3.5/site-packages/mock/tests'...
Listing './lib/python3.5/site-packages/mock-2.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pbr'...
Listing './lib/python3.5/site-packages/pbr/cmd'...
Listing './lib/python3.5/site-packages/pbr/hooks'...
Listing './lib/python3.5/site-packages/pbr/tests'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/data_files'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/doc'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/doc/source'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/pbr_testpackage'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/pbr_testpackage/package_data'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/src'...
Listing './lib/python3.5/site-packages/pbr-3.1.1.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/raritan'...
Listing './lib/python3.5/site-packages/raritan/rpc'...
Listing './lib/python3.5/site-packages/raritan/rpc/assetmgrmodel'...
Listing './lib/python3.5/site-packages/raritan/rpc/auth'...
Listing './lib/python3.5/site-packages/raritan/rpc/auth/ldapsrv'...
Listing './lib/python3.5/site-packages/raritan/rpc/bulkcfg'...
Listing './lib/python3.5/site-packages/raritan/rpc/bulkrpc'...
Listing './lib/python3.5/site-packages/raritan/rpc/cascading'...
Listing './lib/python3.5/site-packages/raritan/rpc/cert'...
Listing './lib/python3.5/site-packages/raritan/rpc/cew'...
Listing './lib/python3.5/site-packages/raritan/rpc/cfg'...
Listing './lib/python3.5/site-packages/raritan/rpc/datetime'...
Listing './lib/python3.5/site-packages/raritan/rpc/devsettings'...
Listing './lib/python3.5/site-packages/raritan/rpc/diag'...
Listing './lib/python3.5/site-packages/raritan/rpc/display'...
Listing './lib/python3.5/site-packages/raritan/rpc/emdmodel'...
Listing './lib/python3.5/site-packages/raritan/rpc/event'...
Listing './lib/python3.5/site-packages/raritan/rpc/firmware'...
Listing './lib/python3.5/site-packages/raritan/rpc/fitness'...
Listing './lib/python3.5/site-packages/raritan/rpc/hmi'...
Listing './lib/python3.5/site-packages/raritan/rpc/idl'...
Listing './lib/python3.5/site-packages/raritan/rpc/jsonrpc'...
Listing './lib/python3.5/site-packages/raritan/rpc/lhx'...
Listing './lib/python3.5/site-packages/raritan/rpc/lhxmodel'...
Listing './lib/python3.5/site-packages/raritan/rpc/logging'...
Listing './lib/python3.5/site-packages/raritan/rpc/modbus'...
Listing './lib/python3.5/site-packages/raritan/rpc/net'...
Listing './lib/python3.5/site-packages/raritan/rpc/opaque'...
Listing './lib/python3.5/site-packages/raritan/rpc/pdumodel'...
Listing './lib/python3.5/site-packages/raritan/rpc/peripheral'...
Listing './lib/python3.5/site-packages/raritan/rpc/portsmodel'...
Listing './lib/python3.5/site-packages/raritan/rpc/powerlogic'...
Listing './lib/python3.5/site-packages/raritan/rpc/production'...
Listing './lib/python3.5/site-packages/raritan/rpc/radius'...
Listing './lib/python3.5/site-packages/raritan/rpc/res_mon'...
Listing './lib/python3.5/site-packages/raritan/rpc/security'...
Listing './lib/python3.5/site-packages/raritan/rpc/sensors'...
Listing './lib/python3.5/site-packages/raritan/rpc/serial'...
Listing './lib/python3.5/site-packages/raritan/rpc/servermon'...
Listing './lib/python3.5/site-packages/raritan/rpc/session'...
Listing './lib/python3.5/site-packages/raritan/rpc/smartcard'...
Listing './lib/python3.5/site-packages/raritan/rpc/sys'...
Listing './lib/python3.5/site-packages/raritan/rpc/test'...
Listing './lib/python3.5/site-packages/raritan/rpc/tfw'...
Listing './lib/python3.5/site-packages/raritan/rpc/um'...
Listing './lib/python3.5/site-packages/raritan/rpc/usb'...
Listing './lib/python3.5/site-packages/raritan/rpc/usermgmt'...
Listing './lib/python3.5/site-packages/raritan/rpc/webcam'...
Listing './lib/python3.5/site-packages/raritan_pdu_shell_package'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/tests'...
Listing './lib/python3.5/site-packages/tests/core'...
Listing './lib/python3.5/site-packages/tests/core/logger'...
Listing './lib/python3.5/site-packages/tests/core/logger/config'...
Listing './share'...
Listing './share/python-wheels'...
